--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,13 @@ body {
   margin: 40px;
   min-height: calc(100vh - 80px);
 }
+
+.left {
+  background-color: darkslategrey;
+  color: azure;
+}
+
+.right {
+  background-color: wheat;
+  color: firebrick;
+}
