--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,13 @@ body {
 }
 
 .left {
+  flex-basis: 2;
   background-color: darkslategrey;
   color: azure;
 }
 
 .right {
+  flex-basis: 1;
   background-color: wheat;
   color: firebrick;
 }
