--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,8 @@ body {
 }
 
 .left {
-  flex: 2 1 0%;
+  flex: 2 1 0%; 
+  /* ^^^^ FYI: urrently being overwritten by inline flexBasis style in App.js */
   /* flex-basis: 2; */
   background-color: darkslategrey;
   color: azure;
@@ -21,6 +22,7 @@ body {
 
 .right {
   flex: 1 1 0%; 
+  /* ^^^^ FYI: currently being overwritten by inline flexBasis style in App.js */
   /* flex-basis: 1; */
   background-color: wheat;
   color: firebrick;
