--- a/src/composition/Tooltip.css
+++ b/src/composition/Tooltip.css
@@ -3,9 +3,9 @@
   position: relative;
 }
 
-.Tooltip-content {
+/* .Tooltip-content {
   color: #01A800;
-}
+} */
 
 .Tooltip-message {
   background-color: hsla(0, 0%, 10%, 0.9);
