updated <App /> with <div> containers seperating each exercise.

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@ body {
 }
 
 .App {
+  /* display: flex;
+  margin: 40px;
+  min-height: calc(100vh - 80px); */
+}
+
+.containSplitz {
   display: flex;
   margin: 40px;
   min-height: calc(100vh - 80px);
