--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,15 @@ body {
   min-height: calc(100vh - 80px); */
 }
 
+.App > div {
+  margin: 40px auto;
+  text-align: center;
+}
+
+.containCounter button {
+  font-size: 18px;
+}
+
 .containTheDate {
   border: 4px solid black;
   font-weight: bold;
@@ -19,6 +28,13 @@ body {
   max-width: 300px;
   padding: 10px;
   text-align: center;
+}
+
+.containTheDate div {
+  background-color: black;
+  color: white;
+  /* display: inline-block; */
+  padding: 5px;
 }
 
 .containSplitz {
