finished state-drills 02: <Bomb />, incl smoke/snapshot tests.

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@ body {
   text-align: center;
 }
 
+.containBomb .sound {
+  font-size: 48px;
+  margin-top: 0;
+}
+
 .containCounter button {
   font-size: 18px;
 }
