--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,16 @@ body {
   text-align: center;
 }
 
+button {
+  margin: 0 5px 0 5px;
+}
+
+.containTabs .content {
+  font-size: 0.9rem;
+  margin: 20px auto 0;
+  max-width: 400px;
+}
+
 .containBomb .sound {
   font-size: 48px;
   margin-top: 0;
